--- a/wiki.html
+++ b/wiki.html
@@ -1,1 +1,21 @@
-
+allied casuality
+</div></td></tr>
+<tr>
+  <th colspan="2" style="background-color:#C3D6EF;text-align:center;vertical-align:middle;font-size:110%;">Casualties and losses</th>
+</tr>
+<tr>
+  <td style="width:50%;border-right:1px dotted #aaa;">
+    <link rel="mw-deduplicated-inline-style" href="mw-data:TemplateStyles:r1126788409">
+    <div class="plainlist">
+      <ul>
+        <li><b>Military dead:</b></li>
+        <li>Over 16,000,000</li>
+        <li><b>Civilian dead:</b></li>
+        <li>Over 45,000,000</li>
+        <li><b>Total dead:</b></li>
+        <li>Over 61,000,000</li>
+        <li>(1937–1945)</li>
+      </ul>
+    </div>
+  </td>
+</tr>
