--- a/wiki.html
+++ b/wiki.html
@@ -19,3 +19,17 @@ allied casuality
     </div>
   </td>
 </tr>
+
+axis casuality
+<link rel="mw-deduplicated-inline-style" href="mw-data:TemplateStyles:r1126788409">
+<div class="plainlist">
+  <ul>
+    <li><b>Military dead:</b></li>
+    <li>Over 8,000,000</li>
+    <li><b>Civilian dead:</b></li>
+    <li>Over 4,000,000</li>
+    <li><b>Total dead:</b></li>
+    <li>Over 12,000,000</li>
+    <li>(1937–1945)</li>
+  </ul>
+</div>
